# postmule

./: .gitattributes  .gitignore  ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  config.example.yaml  council-report.html  credentials.example.yaml  pyproject.toml  requirements.txt  setup.bat  setup.ps1
.claude/: settings.json
.claude/commands/: resume.md
.claude/skills/: Expert-framework-prompt.md
.github/: pull_request_template.md
.github/workflows/: installer-build.yml  release.yml
docs/: CNAME  CONTRIBUTING_PROVIDER.md  architecture.md  configuration.md  decisions.md  index.html  install-cli.md  installation.md  logo_concepts.html  mockup_dashboard.html  mockup_email_daily.html  providers.md  workflows.md
installer/: build.ps1  install.ps1  postmule.iss  postmule.spec  uninstall.ps1
postmule/: cli.py  pipeline.py
postmule/agents/: backup.py  bill_email_intake.py  classification.py  email_ingestion.py  entity_discovery.py  mailbox_ingestion.py  ocr.py  retroactive.py  summary.py
postmule/core/: api_safety.py  config.py  constants.py  credentials.py  logging_setup.py
postmule/data/: _io.py  bills.py  entities.py  entity_corrections.py  feedback.py  forward_to_me.py  notices.py  owners.py  run_log.py  search.py  tags.py
postmule/providers/: __init__.py  registry.py
postmule/web/: app.py
scripts/: dev_setup.sh  google_auth.py
tests/: conftest.py
tests/unit/: test_api_safety.py  test_backup.py  test_bill_email_intake.py  test_classification.py  test_cli.py  test_config.py  test_connections_email.py  test_credentials.py  test_credentials_extended.py  test_data_bills.py  test_data_bills_extended.py  test_data_entities.py  test_data_entity_corrections.py  test_data_feedback.py  test_data_forward_to_me.py  test_data_io.py  test_data_notices.py  test_data_owners.py  test_data_run_log.py  test_data_search.py  test_duplicate_detector.py  test_gmail.py  (+26 more)
(+64 files in other folders)
